--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="bg-gradient-to-r from-purple-700 to-blue-500 text-white p-6 flex flex-wrap justify-between items-center shadow-md">
     <div class="flex-1 text-center md:text-left mb-4 md:mb-0">
-      <img src="image/logo.png" alt="logo" class="h-12 mx-auto md:mx-0">
+      <img src="logo.png" alt="logo" class="h-12 mx-auto md:mx-0">
     </div>
 
     <div class="flex-2 text-center mb-4 md:mb-0">
@@ -88,3 +88,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
